[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Red_paddle.png" type="Texture" id=3]
[ext_resource path="res://Ball.png" type="Texture" id=4]
[ext_resource path="res://Ball.gd" type="Script" id=5]
[ext_resource path="res://Pixel Digivolve.otf" type="DynamicFontData" id=6]
[ext_resource path="res://269718__michorvath__ping-pong-ball-hit.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0503

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 520, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 300 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="PaddleLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( 64, 300 )

[node name="PaddleRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 300 )

[node name="Sprite" parent="PaddleRight" index="0"]
texture = ExtResource( 3 )

[node name="Ball" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 512, 300 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ball"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Ball"]
stream = ExtResource( 7 )

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2( 512, -8 )
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
shape = SubResource( 2 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 512, 608 )
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
shape = SubResource( 2 )

[node name="LeftLimit" type="Area2D" parent="."]
position = Vector2( 0, 300 )
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftLimit"]
shape = SubResource( 3 )

[node name="RightLimit" type="Area2D" parent="."]
position = Vector2( 1032, 300 )
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightLimit"]
shape = SubResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Score" type="Control" parent="HUD"]
visible = false
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPoints" type="Label" parent="HUD/Score"]
anchor_bottom = 1.0
margin_left = 40.0
margin_right = 98.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightPoints" type="Label" parent="HUD/Score"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.0
margin_right = -30.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageBox" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HUD/MessageBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.5
margin_top = -52.5
margin_right = 214.5
margin_bottom = 52.5
custom_fonts/font = SubResource( 4 )
text = "Pong
Hit Space to play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="LeftLimit" to="." method="_on_LeftLimit_body_entered"]
[connection signal="body_entered" from="RightLimit" to="." method="_on_RightLimit_body_entered"]

[editable path="PaddleRight"]
